Fix incident overview top padding on small screens.

--- a/client/app/incident/incident-analysis/incident-analysis.scss
+++ b/client/app/incident/incident-analysis/incident-analysis.scss
@@ -81,6 +81,10 @@
         grid-template-areas: unset !important;
         grid-template-columns: auto !important;
 
+        &:first-child {
+          padding-top: 4rem;
+        }
+
         > *,
         > :first-child::before {
           grid-area: unset !important;
